--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,9 @@ section.resume-section {
 section.resume-section .resume-section-content {
   width: 100%;
 }
+.card {
+  background-color: rgb(185, 216, 189);
+}
 
 .card-body{
   background-color: rgb(185, 216, 189);
