--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,14 @@
 
 body {
   margin: 2;
-  font-family : "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Manjari', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: rgb(185, 216, 189);
   padding-top: 3.5rem;
   scroll-behavior: smooth;
   ;
-  
 }
 
 @media (min-width: 992px) {
@@ -25,30 +23,26 @@ body {
 
 h1 {
   line-height: 1;
-  font-weight: 900;
+  font-weight: 990;
 }
 
 h2 {
-  color: #e66c3b;
-  font-weight: 700;
+  font-weight: 800;
 }
-
 h3 {
-  color: #212529;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 /* Párrafos */
 p.pa {
   font-size: 1.15rem;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .subtitulos {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   font-size: 1.5rem;
-  color:#242323;
 }
 
 .navbar-collapse {
@@ -57,9 +51,8 @@ p.pa {
   align-items: center;
 }
 
-#sideNav {
-  padding-left: 10rem;
-  padding-right: 1rem;
+ #sideNav {
+  background-color: #72B092 !important;
 }
 /* Elementos de la barra lateral con sus eventos */
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -67,9 +60,10 @@ p.pa {
   font-size: 1.2rem;
   letter-spacing: 0.07rem;
   transition: transform .2s;
+  color: black;
 }
 #sideNav .navbar-nav .nav-item .nav-link:hover{
-  transform:scale(1.2);
+  transform:scale(1.1);
 }
 
 /* Cuando el tamaño de la pantalla sea menor a 992px el emento sideNav no se muestra */
@@ -92,14 +86,9 @@ p.pa {
     padding: 0.5rem;
   }
   #sideNav .navbar-brand .img-profile {
-    max-width: 10rem;
-    max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    max-width: 11rem;
+    max-height: 11rem;
   }
-  #sideNav .navbar-brand .img-profile:hover {
-    border: 0.5rem solid rgb(100, 100, 100);
-  }
- 
   #sideNav .navbar-collapse {
     display: flex;
     align-items: flex-start;
@@ -176,10 +165,14 @@ section.resume-section .resume-section-content {
 }
 .card-img-top{
    background-color: rgb(185, 216, 189);
- 
 }
+/* #calc{
+  height: 450px;
+  width: 400px;
+} */
 #formContacto{
-  background-color: rgb(151, 175, 155);
+  border: 1px solid black;
+  background-color: rgb(145, 181, 154);
   padding: 1.3rem;
   border-radius: 6px;
   margin-bottom: 5rem;
